--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mongo-db": "^1.0.2"
+    "mongo-db": "^1.0.2",
+    "nodemon": "^3.0.1"
   }
 }
