--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Satwik-Kar",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongo-db": "^1.0.2",
     "nodemon": "^3.0.1"
