--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongo-db": "^1.0.2",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.5.2",
     "nodemon": "^3.0.1"
   }
 }
